Improved the website look and fixed alignment issues

--- a/client/src/styles/App.css
+++ b/client/src/styles/App.css
@@ -51,7 +51,7 @@
    width: 40vw;
    position: absolute;
    top: 100%;
-   left: 50%;
+   left: 48.75%;
    transform: translate(-50%, -4%);
    z-index: 1;
    display: flex;
@@ -68,12 +68,15 @@
 }
 
 .Results-container {
-   margin: 0 auto 0;
+   height: 87.5vh;
    width: fit-content;
+   margin: 0 auto 0;
+   display: flex;
+   flex-direction: column;
 }
 
 .Results-header {
-   padding: 1.25vh 0;
+   margin: 8px 0;
    display: flex;
    align-items: center;
 }
@@ -96,13 +99,6 @@
 
 .Grid-container {
    margin: 0 auto 0;
-}
-
-.Spinner-container {
-   display: flex;
-   height: 85vh;
-   align-items: center;
-   justify-content: center;
 }
 
 .Item-card {
@@ -140,21 +136,20 @@
    justify-content: center;
    align-items: center;
    width: fit-content;
-   margin: 1.5vh auto 0;
+   margin: auto auto 0;
 }
 
-.Page-input {
-   margin-left: 10px;
-   margin-right: 10px;
-   width: 2.5em !important;
+.Page-text {
+   margin: 0;
+   word-spacing: 3px;
 }
 
 .Page-up-btn {
-   margin-left: 10px;
+   margin-left: 15px;
 }
 
 .Page-down-btn {
-   margin-right: 10px;
+   margin-right: 15px;
 }
 
 .User-form {
